@@ -1,6 +1,6 @@
 # Figure out which plugins to build and create a configuration for each.
 # 
-# Last edited: 2009-08-25 13:46:02 by piumarta on ubuntu.piumarta.com
+# Last edited: 2009-08-26 11:58:56 by piumarta on ubuntu.piumarta.com
 
 FILE (STRINGS ${src}/plugins.int plugins_int)
 STRING (REGEX REPLACE ".*= (.*)" "\\1" plugins_int ${plugins_int})
@@ -67,19 +67,19 @@ MACRO (PLUGIN_SOURCES)
 ENDMACRO (PLUGIN_SOURCES)
 
 MACRO (PLUGIN_DEFINITIONS)
-  SET (${plugin}_definitions ${${plugin}_definitions} ${ARGV})
+  LIST_APPEND (${plugin}_definitions ${ARGV})
 ENDMACRO (PLUGIN_DEFINITIONS)
 
 MACRO (PLUGIN_INCLUDE_DIRECTORIES)
-  SET (${plugin}_include_directories ${${plugin}_include_directories} ${ARGV})
+  LIST_APPEND (${plugin}_include_directories ${ARGV})
 ENDMACRO (PLUGIN_INCLUDE_DIRECTORIES)
 
 MACRO (PLUGIN_LINK_DIRECTORIES)
-  SET (${plugin}_link_directories ${${plugin}_link_directories} ${ARGV})
+  LIST_APPEND (${plugin_target}_link_directories ${ARGV})
 ENDMACRO (PLUGIN_LINK_DIRECTORIES)
 
 MACRO (PLUGIN_LINK_LIBRARIES)
-  SET (${plugin}_link_libraries ${${plugin}_link_libraries} ${ARGV})
+  LIST_APPEND (${plugin_target}_link_libraries ${ARGV})
 ENDMACRO (PLUGIN_LINK_LIBRARIES)
 
 MACRO (CONFIGURE_PLUGIN_LIST plugins_list)
@@ -91,6 +91,11 @@ MACRO (CONFIGURE_PLUGIN_LIST plugins_list)
       FILE_APPEND (${bld}/${plugin}/config.cmake ${dir}/${plugin}/config.cmake)
     ENDFOREACH (dir)
     #MESSAGE ("-- plugin ${plugin}")
+    IF (${plugins_list} STREQUAL "plugins_int")
+      SET (plugin_target "vm")
+    ELSE ()
+      SET (plugin_target "${plugin}")
+    ENDIF (${plugins_list} STREQUAL "plugins_int")
     SET (plugin_disabled)
     INCLUDE (${bld}/${plugin}/config.cmake)
     IF (OPT_without-${plugin})
@@ -132,8 +137,64 @@ MACRO (BUILD_PLUGINS)
 ENDMACRO (BUILD_PLUGINS)
 
 MACRO (PLUGIN_MESSAGE msg)
-  MESSAGE ("-- ${plugin}: ${msg}")
+  MESSAGE (STATUS "${plugin}: ${msg}")
 ENDMACRO (PLUGIN_MESSAGE)
+
+MACRO (PLUGIN_FIND_INCLUDE VAR NAME)
+  FIND_PATH (${VAR}_H ${NAME} ${${plugin_target}_include_directories} ${ARGN})
+  IF (${VAR}_H)
+    PLUGIN_MESSAGE ("${${VAR}_H}/${NAME}")
+    SET (HAVE_${VAR}_H 1)
+    PLUGIN_INCLUDE_DIRECTORIES (${${VAR}_H})
+  ELSE ()
+    PLUGIN_MESSAGE ("${NAME} not found")
+  ENDIF ()
+ENDMACRO ()
+
+MACRO (PLUGIN_REQUIRE_INCLUDE VAR NAME)
+  PLUGIN_FIND_INCLUDE(${VAR} ${NAME} ${ARGN})
+  IF (NOT ${VAR}_H)
+    PLUGIN_DISABLE ()
+  ENDIF ()
+ENDMACRO ()
+
+MACRO (PLUGIN_FIND_LIBRARY VAR NAME)
+  FIND_LIBRARY (LIB${VAR} ${NAME})
+  IF (LIB${VAR})
+    PLUGIN_MESSAGE ("${LIB${VAR}}")
+    SET (HAVE_LIB${VAR} 1)
+    PLUGIN_LINK_LIBRARIES (${LIB${VAR}})
+  ELSE ()
+    PLUGIN_MESSAGE ("lib${NAME} not found")
+  ENDIF ()
+ENDMACRO ()
+
+MACRO (PLUGIN_REQUIRE_LIBRARY VAR NAME)
+  PLUGIN_FIND_LIBRARY(${VAR} ${NAME})
+  if (NOT LIB${VAR})
+    PLUGIN_DISABLE ()
+  ENDIF ()
+ENDMACRO ()
+
+MACRO (PLUGIN_FIND_PACKAGE VAR NAME)
+  IF (PKG_CONFIG_FOUND)
+    PKG_CHECK_MODULES (${VAR} ${NAME})
+    IF (${VAR}_FOUND)
+      PLUGIN_MESSAGE ("${NAME} found")
+      SET (HAVE_${VAR} 1)
+      PLUGIN_INCLUDE_DIRECTORIES (${${VAR}_INCLUDE_DIRS})
+      PLUGIN_LINK_DIRECTORIES (${${VAR}_LIBRARY_DIRS})
+      PLUGIN_LINK_LIBRARIES (${${VAR}_LIBRARIES})
+    ENDIF ()
+  ENDIF ()
+ENDMACRO ()
+
+MACRO (PLUGIN_REQUIRE_PACKAGE VAR NAME)
+  PLUGIN_FIND_PACKAGE(${VAR} ${NAME})
+  IF (NOT ${VAR}_FOUND)
+    PLUGIN_DISABLE ()
+  ENDIF ()
+ENDMACRO ()
 
 MACRO (EXPECT_UNDEFINED_SYMBOLS)
   IF (APPLE)
